--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
-node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build output
+dist/
+build/
+out/
+
+# Optional npm cache directory
+.npm
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Coverage directory
+coverage/
+
+# Debugging
+.vscode/
+.idea/
+*.swp
+
+# Temporary files
+tmp/
+temp/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Next.js build output (if used)
+.next/
+out/
+
+# SvelteKit build output (if used)
+.svelte-kit/
+
+# Nuxt.js build output (if used)
+.nuxt/
